--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
 
 <!DOCTYPE html>
 
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Admin &amp; Supervisor System (Firebase Enabled)</title>
-<script src="https://unpkg.com/lucide@latest"></script>
-<!-- Firebase (compat) SDKs for easier migration -->
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Admin &amp; Supervisor System (Firebase Enabled)</title>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="supabase-adapter.js"></script>
 <style>
-        /* Light mode support */
+        
         .light-mode body, .light-mode {
             background: #f7f7f7;
             color: #111;
@@ -515,3 +519,4 @@
 <script src="app.js"></script>
 </body>
 </html>
+
